src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_SquiggleSyntaxInCompoundProperty.xaml
<DockPanel
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
> 
   <DockPanel.Resources>
	<SolidColorBrush x:Key="RedBrush" Color="Red"/>
   </DockPanel.Resources>

   <Button>
	<Button.Background>
		{StaticResource RedBrush}
	</Button.Background>
   </Button>
</DockPanel>